--- a/src/css/greenLog.css
+++ b/src/css/greenLog.css
@@ -31,8 +31,11 @@
     font-family: 'Roboto', sans-serif;
     letter-spacing: 2px;
 }
-.colContaainer{
+.colContainer{
     margin: 100px 0 100px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .registerBtn{
     background-color: #7AC242;
@@ -56,8 +59,9 @@
     .subtitleText{
         margin-top: 20%;
     }
-    .colContaainer{
-        margin: 20px 0px 20px 0px;
+    .colContainer{
+        margin: 20px 0px;
+        display: block;
     }
 }
 
@@ -71,7 +75,20 @@
     .subtitleText{
         margin-top: 5%;
     }
-    .colContaainer{
+    .colContainer{
         margin: 90px;
+        display: block;
     }
 }
+
+@media screen and (min-width: 770px) {
+    .colContainer{
+        display: block;
+    }
+ }
+
+ @media screen and (min-width: 950px) {
+    .colContainer{
+        display: flex;
+    }
+ }
