--- a/src/css/greenLog.css
+++ b/src/css/greenLog.css
@@ -14,20 +14,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 100vh;
+    height: 70vh;
     background-blend-mode: overlay;
 } 
 .headText{
     color: #fff !important;
     text-transform: uppercase;
-    font-size: 4em !important;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 6px;
-    margin-top: 8px;
+    margin-top: -1vmin;
 } 
 .subtitleText{
     color: #fff !important;
-    margin: 4%;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 2px;
 }
